# sakurako-translate

./: README.md  hyper_params.py  main.py  model_making.py  pyproject.toml  read_csv.py  self_attention.py  utils.py
