[tool.poetry]
name = "Sakurako-Translate"
version = "0.1.0"
description = "Translate plain Japanese into Sakurako-like Japanese."
authors = ["Kota <nagamizo.kota@inf.kyushu-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.4"
tensorboard = "^2.4.1"
torch = "^1.7.1"
tqdm = "^4.51.0"
transformers = "^4.1.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
